--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Bocar COLY",
+  "author": "Djotiguy Koulibaly",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
